220710 네이버 소셜로그인 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,12 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  profiles:
+    include: oauth
 
   jpa:
     hibernate:
-      ddl-auto: create #entity를 생성시점에 지우고 다 다시 생성
+      ddl-auto: create-drop #entity를 생성시점에 지우고 다 다시 생성
     properties:
       hibernate:
         #        show_sql: true
