220715 웹 api 마무리. 소셜로그인 재 구성중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
   org.hibernate.type: trace
+
+#jwt:
+#  header: Authorization
+#  secret:
+#  token-validity-in-seconds: 86400
