--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -6,6 +6,7 @@ spring:
           naver:
             client-id: QKR6g9QcGNlCUP7CUdTa
             client-secret: LQbKCSr0xm
+            client-authentication-method: post
             redirect-uri: http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name, email, gender, birthyear
