--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-application-oauth.properties
+application-oauth.yml
+application.yml
+
 ### STS ###
 .apt_generated
 .classpath
