--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -7,7 +7,7 @@ spring:
             client-id: QKR6g9QcGNlCUP7CUdTa
             client-secret: LQbKCSr0xm
             client-authentication-method: post
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://ec2-3-37-94-86.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/naver
             authorization-grant-type: authorization_code
             scope: name, email, gender, birthyear
             client-name: Naver
