--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update #entity를 생성시점에 지우고 다 다시 생성
+      ddl-auto: create-drop #entity를 생성시점에 지우고 다 다시 생성
     properties:
       hibernate:
         #        show_sql: true
