--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 .gradle
 build/
+application-oauth.yml
+appplication.yml
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
