--- a/appspec.yml
+++ b/appspec.yml
@@ -10,15 +10,15 @@ permissions:
   - object: /
     pattern: "**"
 
-
-hooks:
-  ApplicationStart:
-    - location: scripts/run_new_was.sh
-      timeout: 180
-      runas: ec2-user
-    - location: scripts/health_check.sh
-      timeout: 180
-      runas: ec2-user
-    - location: scripts/switch.sh
-      timeout: 180
-      runas: ec2-user
+#
+#hooks:
+#  ApplicationStart:
+#    - location: scripts/run_new_was.sh
+#      timeout: 180
+#      runas: ec2-user
+#    - location: scripts/health_check.sh
+#      timeout: 180
+#      runas: ec2-user
+#    - location: scripts/switch.sh
+#      timeout: 180
+#      runas: ec2-user
