--- a/appspec.yml
+++ b/appspec.yml
@@ -9,8 +9,8 @@ files:
 permissions:
   - object: /
     pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+    owner: ubuntu
+    group: ubuntu
 
 
 
@@ -18,10 +18,10 @@ hooks:
   ApplicationStart:
     - location: scripts/run_new_was.sh
       timeout: 180
-      runas: ec2-user
+      runas: ubuntu
     - location: scripts/health_check.sh
       timeout: 180
-      runas: ec2-user
+      runas: ubuntu
     - location: scripts/switch.sh
       timeout: 180
-      runas: ec2-user
+      runas: ubuntu
