--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,9 +48,9 @@ app:
     tokenExpiry: 180000
     refreshTokenExpiry: 604800000
   oauth2:
-    authorized-redirect-uris: http://localhost:3000, http://weato.net/login, http://localhost:8080, http://3.37.94.86
+    authorized-redirect-uris: http://localhost:3000, https://weato.net/login, http://localhost:8080, http://3.37.94.86
 
 
 logging-module:
-  version: 0.1.3
+  version: 0.2.0
 
